refactor: externalize all hardcoded URLs, credentials and API keys to environment variables